# safe-script-runner-plugin

./: .gitignore  .travis.yml  README.md  plugin.yaml  requirements.txt  setup.cfg  setup.py  tox.ini
safe_script_runner_plugin/: tasks.py
