[metadata]
name = safe_script_runner_plugin
version = 1.rc1
summary = Safe script runner wrapper for Cloudify Fabric plugin
description-file =
    README.md
author = Denis Makogon

classifier =
    Environment :: Cloudify
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

requires-python = >=2.7

[files]
packages =
     safe_script_runner_plugin

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1
